src/bison/bison.output
Gramática

    0 $accept: S $end

    1 S: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | fun_decl

    6 var_decl: TYPE ID ';'

    7 $@1: ε

    8 fun_decl: TYPE ID '(' params ')' $@1 block_stmt

    9 $@2: ε

   10 fun_decl: TYPE ID '(' ')' $@2 block_stmt
   11         | error

   12 params: params ',' param_decl
   13       | param_decl
   14       | error

   15 param_decl: TYPE ID

   16 statement: exp_stmt
   17          | block_stmt
   18          | if_stmt
   19          | return_stmt
   20          | write_stmt
   21          | writeln_stmt
   22          | read_stmt
   23          | for_stmt

   24 for_stmt: FOR '(' assign_exp ';' simple_exp ';' assign_exp ')' statement
   25         | FOR '(' error ';' simple_exp ';' assign_exp ')' statement

   26 exp_stmt: exp ';'
   27         | ';'

   28 exp: assign_exp
   29    | simple_exp

   30 assign_exp: ID ASSIGN simple_exp
   31           | ID error

   32 block_stmt: '{' stmt_list '}'

   33 stmt_list: stmt_list var_or_statement
   34          | stmt_list error
   35          | var_or_statement
   36          | error

   37 var_or_statement: statement
   38                 | var_decl

   39 if_stmt: IF '(' simple_exp ')' statement
   40        | IF '(' simple_exp ')' statement ELSE statement

   41 return_stmt: RETURN ';'
   42            | RETURN exp ';'
   43            | RETURN error

   44 write_stmt: WRITE '(' simple_exp ')' ';'
   45           | WRITE error

   46 writeln_stmt: WRITELN '(' simple_exp ')' ';'

   47 read_stmt: READ '(' ID ')' ';'

   48 simple_exp: bin_exp
   49           | bin_list_exp

   50 unary_list_exp: '?' factor
   51               | '%' factor

   52 bin_list_exp: factor ':' factor
   53             | factor MAP factor
   54             | factor FILTER factor

   55 bin_exp: bin_exp LOG_OP unary_log_exp
   56        | unary_log_exp

   57 unary_log_exp: EXCLAMATION unary_log_exp
   58              | rel_exp

   59 rel_exp: rel_exp REL_OP sum_exp
   60        | sum_exp

   61 sum_exp: sum_exp SUM_OP mul_exp
   62        | mul_exp

   63 mul_exp: mul_exp MUL_OP factor
   64        | factor
   65        | unary_list_exp

   66 factor: immutable
   67       | ID
   68       | SUM_OP factor

   69 immutable: '(' simple_exp ')'
   70          | call
   71          | constant

   72 call: ID '(' args ')'
   73     | ID '(' ')'

   74 args: args ',' arg
   75     | arg

   76 arg: simple_exp

   77 constant: NIL
   78         | INT
   79         | FLOAT
   80         | STRING


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '%' <token> (37) 51
    '(' <token> (40) 8 10 24 25 39 40 44 46 47 69 72 73
    ')' <token> (41) 8 10 24 25 39 40 44 46 47 69 72 73
    ',' <token> (44) 12 74
    ':' <token> (58) 52
    ';' <token> (59) 6 24 25 26 27 41 42 44 46 47
    '?' <token> (63) 50
    '{' <token> (123) 32
    '}' <token> (125) 32
    error (256) 11 14 25 31 34 36 43 45
    ID <token> (258) 6 8 10 15 30 31 47 67 72 73
    INT <token> (259) 78
    FLOAT <token> (260) 79
    NIL <token> (261) 77
    IF <token> (262) 39 40
    ELSE <token> (263) 40
    ASSIGN <token> (264) 30
    FOR <token> (265) 24 25
    RETURN <token> (266) 41 42 43
    TYPE <token> (267) 6 8 10 15
    WRITE <token> (268) 44 45
    WRITELN <token> (269) 46
    READ <token> (270) 47
    MUL_OP <token> (271) 63
    SUM_OP <token> (272) 61 68
    REL_OP <token> (273) 59
    EXCLAMATION <token> (274) 57
    LOG_OP <token> (275) 55
    MAP <token> (276) 53
    FILTER <token> (277) 54
    THEN (278)
    STRING <token> (279) 80


Não terminais com as regras onde eles aparecem

    $accept (34)
        à esquerda: 0
    S <node> (35)
        à esquerda: 1
        à direita: 0
    decl_list <node> (36)
        à esquerda: 2 3
        à direita: 1 2
    decl <node> (37)
        à esquerda: 4 5
        à direita: 2 3
    var_decl <node> (38)
        à esquerda: 6
        à direita: 4 38
    fun_decl <node> (39)
        à esquerda: 8 10 11
        à direita: 5
    $@1 (40)
        à esquerda: 7
        à direita: 8
    $@2 (41)
        à esquerda: 9
        à direita: 10
    params <node> (42)
        à esquerda: 12 13 14
        à direita: 8 12
    param_decl <node> (43)
        à esquerda: 15
        à direita: 12 13
    statement <node> (44)
        à esquerda: 16 17 18 19 20 21 22 23
        à direita: 24 25 37 39 40
    for_stmt <node> (45)
        à esquerda: 24 25
        à direita: 23
    exp_stmt <node> (46)
        à esquerda: 26 27
        à direita: 16
    exp <node> (47)
        à esquerda: 28 29
        à direita: 26 42
    assign_exp <node> (48)
        à esquerda: 30 31
        à direita: 24 25 28
    block_stmt <node> (49)
        à esquerda: 32
        à direita: 8 10 17
    stmt_list <node> (50)
        à esquerda: 33 34 35 36
        à direita: 32 33 34
    var_or_statement <node> (51)
        à esquerda: 37 38
        à direita: 33 35
    if_stmt <node> (52)
        à esquerda: 39 40
        à direita: 18
    return_stmt <node> (53)
        à esquerda: 41 42 43
        à direita: 19
    write_stmt <node> (54)
        à esquerda: 44 45
        à direita: 20
    writeln_stmt <node> (55)
        à esquerda: 46
        à direita: 21
    read_stmt <node> (56)
        à esquerda: 47
        à direita: 22
    simple_exp <node> (57)
        à esquerda: 48 49
        à direita: 24 25 29 30 39 40 44 46 69 76
    unary_list_exp <node> (58)
        à esquerda: 50 51
        à direita: 65
    bin_list_exp <node> (59)
        à esquerda: 52 53 54
        à direita: 49
    bin_exp <node> (60)
        à esquerda: 55 56
        à direita: 48 55
    unary_log_exp <node> (61)
        à esquerda: 57 58
        à direita: 55 56 57
    rel_exp <node> (62)
        à esquerda: 59 60
        à direita: 58 59
    sum_exp <node> (63)
        à esquerda: 61 62
        à direita: 59 60 61
    mul_exp <node> (64)
        à esquerda: 63 64 65
        à direita: 61 62 63
    factor <node> (65)
        à esquerda: 66 67 68
        à direita: 50 51 52 53 54 63 64 68
    immutable <node> (66)
        à esquerda: 69 70 71
        à direita: 66
    call <node> (67)
        à esquerda: 72 73
        à direita: 70
    args <node> (68)
        à esquerda: 74 75
        à direita: 72 74
    arg <node> (69)
        à esquerda: 76
        à direita: 74 75
    constant <node> (70)
        à esquerda: 77 78 79 80
        à direita: 71


Estado 0

    0 $accept: • S $end

    error  deslocar, e ir ao estado 1
    TYPE   deslocar, e ir ao estado 2

    S          ir ao estado 3
    decl_list  ir ao estado 4
    decl       ir ao estado 5
    var_decl   ir ao estado 6
    fun_decl   ir ao estado 7


Estado 1

   11 fun_decl: error •

    $end   reduzir usando a regra 11 (fun_decl)
    error  reduzir usando a regra 11 (fun_decl)
    TYPE   reduzir usando a regra 11 (fun_decl)


Estado 2

    6 var_decl: TYPE • ID ';'
    8 fun_decl: TYPE • ID '(' params ')' $@1 block_stmt
   10         | TYPE • ID '(' ')' $@2 block_stmt

    ID  deslocar, e ir ao estado 8


Estado 3

    0 $accept: S • $end

    $end  deslocar, e ir ao estado 9


Estado 4

    1 S: decl_list •
    2 decl_list: decl_list • decl

    error  deslocar, e ir ao estado 1
    TYPE   deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (S)

    decl      ir ao estado 10
    var_decl  ir ao estado 6
    fun_decl  ir ao estado 7


Estado 5

    3 decl_list: decl •

    $end   reduzir usando a regra 3 (decl_list)
    error  reduzir usando a regra 3 (decl_list)
    TYPE   reduzir usando a regra 3 (decl_list)


Estado 6

    4 decl: var_decl •

    $end   reduzir usando a regra 4 (decl)
    error  reduzir usando a regra 4 (decl)
    TYPE   reduzir usando a regra 4 (decl)


Estado 7

    5 decl: fun_decl •

    $end   reduzir usando a regra 5 (decl)
    error  reduzir usando a regra 5 (decl)
    TYPE   reduzir usando a regra 5 (decl)


Estado 8

    6 var_decl: TYPE ID • ';'
    8 fun_decl: TYPE ID • '(' params ')' $@1 block_stmt
   10         | TYPE ID • '(' ')' $@2 block_stmt

    ';'  deslocar, e ir ao estado 11
    '('  deslocar, e ir ao estado 12


Estado 9

    0 $accept: S $end •

    $padrão  aceitar


Estado 10

    2 decl_list: decl_list decl •

    $end   reduzir usando a regra 2 (decl_list)
    error  reduzir usando a regra 2 (decl_list)
    TYPE   reduzir usando a regra 2 (decl_list)


Estado 11

    6 var_decl: TYPE ID ';' •

    $end   reduzir usando a regra 6 (var_decl)
    error  reduzir usando a regra 6 (var_decl)
    TYPE   reduzir usando a regra 6 (var_decl)


Estado 12

    8 fun_decl: TYPE ID '(' • params ')' $@1 block_stmt
   10         | TYPE ID '(' • ')' $@2 block_stmt

    error  deslocar, e ir ao estado 13
    TYPE   deslocar, e ir ao estado 14
    ')'    deslocar, e ir ao estado 15

    params      ir ao estado 16
    param_decl  ir ao estado 17


Estado 13

   14 params: error •

    ','  reduzir usando a regra 14 (params)
    ')'  reduzir usando a regra 14 (params)


Estado 14

   15 param_decl: TYPE • ID

    ID  deslocar, e ir ao estado 18


Estado 15

   10 fun_decl: TYPE ID '(' ')' • $@2 block_stmt

    '{'  reduzir usando a regra 9 ($@2)

    $@2  ir ao estado 19


Estado 16

    8 fun_decl: TYPE ID '(' params • ')' $@1 block_stmt
   12 params: params • ',' param_decl

    ','  deslocar, e ir ao estado 20
    ')'  deslocar, e ir ao estado 21


Estado 17

   13 params: param_decl •

    ','  reduzir usando a regra 13 (params)
    ')'  reduzir usando a regra 13 (params)


Estado 18

   15 param_decl: TYPE ID •

    ','  reduzir usando a regra 15 (param_decl)
    ')'  reduzir usando a regra 15 (param_decl)


Estado 19

   10 fun_decl: TYPE ID '(' ')' $@2 • block_stmt

    '{'  deslocar, e ir ao estado 22

    block_stmt  ir ao estado 23


Estado 20

   12 params: params ',' • param_decl

    TYPE  deslocar, e ir ao estado 14

    param_decl  ir ao estado 24


Estado 21

    8 fun_decl: TYPE ID '(' params ')' • $@1 block_stmt

    '{'  reduzir usando a regra 7 ($@1)

    $@1  ir ao estado 25


Estado 22

   32 block_stmt: '{' • stmt_list '}'

    error        deslocar, e ir ao estado 26
    ID           deslocar, e ir ao estado 27
    INT          deslocar, e ir ao estado 28
    FLOAT        deslocar, e ir ao estado 29
    NIL          deslocar, e ir ao estado 30
    IF           deslocar, e ir ao estado 31
    FOR          deslocar, e ir ao estado 32
    RETURN       deslocar, e ir ao estado 33
    TYPE         deslocar, e ir ao estado 34
    WRITE        deslocar, e ir ao estado 35
    WRITELN      deslocar, e ir ao estado 36
    READ         deslocar, e ir ao estado 37
    SUM_OP       deslocar, e ir ao estado 38
    EXCLAMATION  deslocar, e ir ao estado 39
    '?'          deslocar, e ir ao estado 40
    '%'          deslocar, e ir ao estado 41
    STRING       deslocar, e ir ao estado 42
    ';'          deslocar, e ir ao estado 43
    '('          deslocar, e ir ao estado 44
    '{'          deslocar, e ir ao estado 149

    var_decl          ir ao estado 45
    statement         ir ao estado 46
    for_stmt          ir ao estado 47
    exp_stmt          ir ao estado 48
    exp               ir ao estado 49
    assign_exp        ir ao estado 50
    block_stmt        ir ao estado 51
    stmt_list         ir ao estado 52
    var_or_statement  ir ao estado 53
    if_stmt           ir ao estado 54
    return_stmt       ir ao estado 55
    write_stmt        ir ao estado 56
    writeln_stmt      ir ao estado 57
    read_stmt         ir ao estado 58
    simple_exp        ir ao estado 59
    unary_list_exp    ir ao estado 60
    bin_list_exp      ir ao estado 61
    bin_exp           ir ao estado 62
    unary_log_exp     ir ao estado 63
    rel_exp           ir ao estado 64
    sum_exp           ir ao estado 65
    mul_exp           ir ao estado 66
    factor            ir ao estado 67
    immutable         ir ao estado 68
    call              ir ao estado 69
    constant          ir ao estado 70


Estado 23

   10 fun_decl: TYPE ID '(' ')' $@2 block_stmt •

    $end   reduzir usando a regra 10 (fun_decl)
    error  reduzir usando a regra 10 (fun_decl)
    TYPE   reduzir usando a regra 10 (fun_decl)


Estado 24

   12 params: params ',' param_decl •

    ','  reduzir usando a regra 12 (params)
    ')'  reduzir usando a regra 12 (params)


Estado 25

    8 fun_decl: TYPE ID '(' params ')' $@1 • block_stmt

    '{'  deslocar, e ir ao estado 22

    block_stmt  ir ao estado 71


Estado 26

   36 stmt_list: error •
